log
Thu 09 Mar 2023 03:41:07 PM UTC: 
 tests:  0|7
total_score: 0/70
3ef49b4
Thu 09 Mar 2023 04:18:04 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: ‘temp’ undeclared (first use in this function)
   18 |   temp = 0
      |   ^~~~
exercises.c:18:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:18:11: error: expected ‘;’ before ‘temp’
   18 |   temp = 0
      |           ^
      |           ;
   19 |   temp = a
      |   ~~~~     
Compilation failed
c400da4
Thu 09 Mar 2023 04:18:31 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:19:8: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   19 |   temp = a;
      |        ^
exercises.c:21:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   21 |   b = temp;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
3dff064
Thu 09 Mar 2023 04:21:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
9de37c2
Thu 16 Mar 2023 03:30:36 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
51f846d
Thu 16 Mar 2023 03:36:17 PM UTC: 
 exercises.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:33:3: error: invalid type argument of unary ‘*’ (have ‘int’)
   33 |   *min[0];
      |   ^~~~~~~
exercises.c:34:3: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |   *max[0];
      |   ^~~~~~~
exercises.c:36:31: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   36 |   for(unsigned short i = 0, i < n, i++)
      |                               ^
exercises.c:47:1: error: expected expression before ‘}’ token
   47 | }
      | ^
exercises.c:47:1: error: expected expression before ‘}’ token
exercises.c:47:1: error: expected expression before ‘}’ token
exercises.c:36:22: error: unused variable ‘i’ [-Werror=unused-variable]
   36 |   for(unsigned short i = 0, i < n, i++)
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
8719f70
Thu 16 Mar 2023 03:37:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:33:3: error: invalid type argument of unary ‘*’ (have ‘int’)
   33 |   *min[0];
      |   ^~~~~~~
exercises.c:34:3: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |   *max[0];
      |   ^~~~~~~
Compilation failed
2159e8e
Thu 16 Mar 2023 03:37:26 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
20a256d
